--- a/devops.html
+++ b/devops.html
@@ -120,13 +120,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
+<h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
       Infrastructure/DevOps/Site Reliability Engineer - Digital Assets Data, Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/devops-engineer-czvluQRIur6zrIaKld2Sj6'>DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/devops-engineer-czvluQRIur6zrIaKld2Sj6'>DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -134,7 +134,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nezasa.join.com/jobs/268473-devops-engineer'>Job @ Nezasa (Lisbon): DevOps Engineer | JOIN</a></h5> 
+<h5><a href='https://nezasa.join.com/jobs/268473-devops-engineer'>Job @ Nezasa (Lisbon): DevOps Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -255,7 +255,7 @@ term?...</p>
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nymedia/71f5227e-5ee8-4a49-839b-ebb38d8fc713'>New York Media - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/nymedia/71f5227e-5ee8-4a49-839b-ebb38d8fc713'>New York Media - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -313,7 +313,7 @@ term?...</p>
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/oYSzafwj'>Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA</a></h5> 
+<h5><a href='https://jobs.jobvite.com/guidewire-software/job/oYSzafwj'>Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -350,7 +350,7 @@ term?...</p>
 <p>Jul 17, 2019 ... Let your line manager know and click apply now to a short application and send 
 us your CV. Any questions before taking the next step? You can contact Dorian.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/humio/jobs/4361639002'>Job Application for DevOps Support Engineer - US Remote at Humio</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/humio/jobs/4361639002'>Job Application for DevOps Support Engineer - US Remote at Humio</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -363,7 +363,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Manchester</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FusionFactory/743999692213298-devops-engineer'>Fusion Factory DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FusionFactory/743999692213298-devops-engineer'>Fusion Factory DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -439,7 +439,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cloudbees/jobs/1786226'>Job Application for DevOps Consultant, Remote  at CloudBees</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cloudbees/jobs/1786226'>Job Application for DevOps Consultant, Remote  at CloudBees</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
