--- a/software.html
+++ b/software.html
@@ -99,11 +99,11 @@
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/software-developer-%E2%80%93-electronic-products-2681'>Software Developer ? Electronic products - Itron Careers</a></h5> 
+<h5><a href='https://itron.referrals.selectminds.com/jobs/software-developer-%E2%80%93-electronic-products-2681'>Software Developer ? Electronic products - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oNoO9fwS&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=n7lVVLwy'>Tenable Careers - Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oNoO9fwS&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=n7lVVLwy'>Tenable Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/48NWbDkJOw/Software-Engineer-9279803'>Software Engineer (9279803) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/48NWbDkJOw/Software-Engineer-9279803'>Software Engineer (9279803) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -171,7 +171,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/LFRM4Qnawv/Visualization-Tools-Software-Engineer'>Visualization tools software engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/LFRM4Qnawv/Visualization-Tools-Software-Engineer'>Visualization tools software engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -179,7 +179,7 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692304035-software-developer'>Progressive technology solutions Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692304035-software-developer'>Progressive technology solutions Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Woodland Hills, CA California North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -195,7 +195,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/varomoney/baf789f9-6a67-4d15-ae4d-4291e431119c'>Varo Money - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/varomoney/baf789f9-6a67-4d15-ae4d-4291e431119c'>Varo Money - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -235,7 +235,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quad.referrals.selectminds.com/jobs/software-engineer-12695'>Software Engineer - Be Quad</a></h5> 
+<h5><a href='https://quad.referrals.selectminds.com/jobs/software-engineer-12695'>Software Engineer - Be Quad</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -267,7 +267,7 @@
 <p><span class="badge badge-light">Brazil Brazil S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/forwardnetworks/e9c8777b-28d0-40f0-b9b5-91249094e4b1'>Forward Networks - Sr. Software Engineer, Backend</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forwardnetworks/e9c8777b-28d0-40f0-b9b5-91249094e4b1'>Forward Networks - Sr. Software Engineer, Backend</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -310,6 +310,16 @@
 <h5><a href='https://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/hopper/a3d4c34b-32ed-43af-80e1-1a19e0204709'>Hopper - Senior Software Engineer - Mobile</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... We are leveraging the power that comes from combining massive amounts of 
+data and machine learning to build the world's fastest-growing travel app -- one?...</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/hopper/b35f7c42-979f-42ab-8156-458365efcb10'>Hopper - Software Engineering Team Lead - Microservices</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... We are leveraging the power that comes from combining massive amounts of 
+data and machine learning to build the world's fastest-growing travel app -- one?...</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/apttus/job/oYRI9fwq'>Apttus Careers - Software Engineer, Cloud Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -369,7 +379,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/roostify/jobs/4327482002'>Job Application for Senior Software Engineer, Backend at Roostify</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/roostify/jobs/4327482002'>Job Application for Senior Software Engineer, Backend at Roostify</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -381,7 +391,7 @@
 <p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/idt/d46403cc-d3aa-41b8-9ed8-999a7200e354'>IDT - Lead Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/idt/d46403cc-d3aa-41b8-9ed8-999a7200e354'>IDT - Lead Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -397,11 +407,11 @@
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://postman.workable.com/j/69AA5C5A99'>Postman - Jobs: Software Engineer, Intern - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postman.workable.com/j/69AA5C5A99'>Postman - Jobs: Software Engineer, Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kustomer/jobs/1793272'>Job Application for Software Engineer in Test at Kustomer</a></h5> 
+<h5><a href='https://boards.greenhouse.io/kustomer/jobs/1793272'>Job Application for Software Engineer in Test at Kustomer</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -425,7 +435,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of Senior Software Engineer at Crossbeam.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
+<h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Software Engineer Machine Learning (m/f/d) at 
 riskmethods.</p>
@@ -437,15 +447,6 @@ riskmethods.</p>
 <h5><a href='https://mercari.workable.com/jobs/1004862'>Software Engineer, Architect [Merpay]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 ?? ... Apply online for the job of Software Engineer, Architect [Merpay] at Mercari, inc.</p>
-<hr/>
-<h5><a href='https://rovco.workable.com/j/1B45DF8FEC?viewed=true'>Rovco - Jobs: C++ Software Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... Apply online for the job of C++ Software Engineer at Rovco.</p>
-<hr/>
-<h5><a href='https://smartnews.workable.com/j/58BE190F73?viewed=true'>SmartNews, Inc. - Jobs: Staff Software Engineer, AI Infrastructure ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... Apply online for the job of Staff Software Engineer, AI Infrastructure at SmartNews
-, Inc.</p>
 <hr/>
 
 
